fix: Adjust margin-top for OrganizationName for better alignment

--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -90,7 +90,7 @@
   text-decoration: none;
   font-size: 36px;
   font-weight: bolder;
-  margin-top: -0.9rem;
+  margin-top: -0.7rem;
 }
 
 .Auth a {
